--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@types/graphql": "^14.0.3",
     "aws-sdk": "^2.382.0",
+    "graphql": "^14.0.2",
     "serverless": "^1.35.1",
     "uuid": "^3.3.2"
   },
