--- a/serverless.yml
+++ b/serverless.yml
@@ -10,6 +10,7 @@ provider:
   runtime: nodejs8.10
   environment:
     DYNAMODB_TABLE: ${self:service}-${self:provider.stage}
+  region: ap-northeast-1
   iamRoleStatements: # IAM role statements so that services can be accessed in the AWS account
     - Effect: "Allow"
       Action: # Gives permission to DynamoDB tables in a specific region
