--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "deploy": "serverless deploy -v",
     "remove": "serverless remove",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch"
   },
   "dependencies": {
     "@types/graphql": "^14.0.3",
@@ -17,9 +17,12 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.1",
+    "@types/jest": "^24.0.0",
     "@types/node": "^8.0.57",
+    "jest": "^24.1.0",
     "serverless-webpack": "^5.1.1",
     "source-map-support": "^0.5.6",
+    "ts-jest": "^23.10.5",
     "ts-loader": "^4.2.0",
     "typescript": "^2.9.2",
     "webpack": "^4.5.0"
